added bootstrap and jquery, all initial style

--- a/fridge_door.css
+++ b/fridge_door.css
@@ -1,44 +1,5 @@
-button:hover {
-    background-color:#D6DFb2;
-    border:1px solid #C6D880;
-}
-
-button:active {
-    background-color:#529214;
-    border:1px solid #529214;
-    color:#fff;
-}
-
-/*******/
-
-#main {
-    margin: 20px;
-}
-
-#left {
-    float: left;
-    width: 40%;
-}
-
-#right {
-    float: left;
-    width: 50%;
-}
-
-#dropbox {
-    width: 425px;
-    height: 300px;
-    border: 2px solid #DDD;
-    -moz-border-radius: 8px;
-    -webkit-border-radius: 8px;
-    background-color: #FEFFEC;
-    text-align: center;
-    color: #BBB;
-    font-size: 2em;
-    font-family: Arial, sans-serif;
-}
- 
-#droplabel {
-    position: relative;
-    top: 40%;
+.freezer {
+  height: 800px;
+  width: 600px:
+  overflow: auto;
 }
